# vibescan

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  HOW_IT_WORKS.md  PORTFOLIO.md  PRD.md
src/vibescan/: __init__.py  __main__.py  cli.py  i18n.py
src/vibescan/collector/: __init__.py  context.py  file_collector.py  gitignore_parser.py
src/vibescan/models/: __init__.py  issue.py  scan_result.py
src/vibescan/reporters/: console.py  html_reporter.py  json_reporter.py
src/vibescan/rules/: __init__.py  base.py  dangerous_patterns.py  git_hygiene.py  registry.py  structure.py
src/vibescan/rules/secret/: _filters.py  cicd_pipeline.py  cloud_credentials.py  config_hardcode.py  data_files.py  doc_secrets.py  docker_infra.py  editor_remnants.py  env_exposure.py  frontend_env.py  hardcoded_patterns.py  ide_settings.py  mobile_files.py  private_keys.py  system_configs.py
tests/: conftest.py  test_aggregator.py  test_cli.py  test_models.py  test_reporters.py
tests/test_collector/: test_file_collector.py  test_gitignore_parser.py
tests/test_rules/: test_dangerous_patterns.py  test_git_hygiene.py  test_secret_rules.py  test_structure.py
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
website/: index.html  vibescan-website-v3.jsx
