[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibescan-cli"
version = "0.2.5"
description = "Scan your vibe-coded project for leaked secrets and security issues"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "VibeScan Team" },
]
keywords = ["security", "secrets", "scanner", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
vibescan = "vibescan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vibescan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
